Bug 319681 - tellico crashes when I search "Right at Your Door" with DVDFr.com
Summary: tellico crashes when I search "Right at Your Door" with DVDFr.com
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.7
Platform: Mageia RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-11 18:34 UTC by Olivier Delaune
Modified: 2013-05-20 20:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Delaune 2013-05-11 18:34:48 UTC
Hello, I got a crash of tellico if I click on "Search" button to fill automatically the different fields.


Reproducible: Always

Steps to Reproduce:
1.Open the "Search dialog"
2.Type "Right at Your Door" in the field and select DVDFr.com
3.Click on "Search"
4.I got 2 results (one for the blu-ray and the other one for the DVD)
5.Click on the "DVD" result
6.Observe the crash



Application: Tellico (tellico), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#6  0x00000000005796d7 in KSharedPtr (o=..., this=0x7fff1d88f240) at /usr/include/ksharedptr.h:84
#7  Tellico::Fetch::DVDFrFetcher::fetchEntryHookData (this=<optimized out>, entry_=...) at /usr/src/debug/tellico-2.3.7/src/fetch/dvdfrfetcher.cpp:146
#8  0x0000000000551ba7 in Tellico::Fetch::XMLFetcher::fetchEntryHook (this=0x194e760, uid_=850408770) at /usr/src/debug/tellico-2.3.7/src/fetch/xmlfetcher.cpp:181
#9  0x00000000004f1737 in Tellico::Fetch::Fetcher::fetchEntry (this=0x194e760, uid_=<optimized out>) at /usr/src/debug/tellico-2.3.7/src/fetch/fetcher.cpp:120
#10 0x00000000004f7ee2 in Tellico::Fetch::FetchResult::fetchEntry (this=<optimized out>) at /usr/src/debug/tellico-2.3.7/src/fetch/fetchresult.cpp:68
#11 0x000000000049d874 in Tellico::FetchDialog::slotShowEntry (this=0x261ba10) at /usr/src/debug/tellico-2.3.7/src/fetchdialog.cpp:540
#12 0x00007fa449c1062f in QMetaObject::activate (sender=0x2627eb0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3539
#13 0x00007fa44ab6e2df in QTreeWidgetPrivate::_q_selectionChanged (this=0x26bbbc0, selected=..., deselected=...) at itemviews/qtreewidget.cpp:2317
#14 0x00007fa449c1062f in QMetaObject::activate (sender=0x25d6110, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff1d88f5b0) at kernel/qobject.cpp:3539
#15 0x00007fa44ab4b407 in QItemSelectionModel::selectionChanged (this=this@entry=0x25d6110, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:166
#16 0x00007fa44ab4d0e3 in QItemSelectionModel::emitSelectionChanged (this=this@entry=0x25d6110, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1544
#17 0x00007fa44ab5125c in QItemSelectionModel::select (this=0x25d6110, selection=..., command=...) at itemviews/qitemselectionmodel.cpp:1110
#18 0x00007fa44ab3d5f7 in QTreeViewPrivate::select (this=0x26bbbc0, topIndex=..., bottomIndex=..., command=...) at itemviews/qtreeview.cpp:3685
#19 0x00007fa44ab3e1ca in QTreeView::setSelection (this=<optimized out>, rect=..., command=...) at itemviews/qtreeview.cpp:2295
#20 0x00007fa44aafd021 in QAbstractItemView::mousePressEvent (this=0x2627eb0, event=<optimized out>) at itemviews/qabstractitemview.cpp:1690
#21 0x00007fa44a641c70 in QWidget::event (this=0x2627eb0, event=0x7fff1d890840) at kernel/qwidget.cpp:8371
#22 0x00007fa44a9ec216 in QFrame::event (this=0x2627eb0, e=0x7fff1d890840) at widgets/qframe.cpp:557
#23 0x00007fa44aaf78ab in QAbstractItemView::viewportEvent (this=0x2627eb0, event=0x7fff1d890840) at itemviews/qabstractitemview.cpp:1644
#24 0x00007fa44ab3c141 in QTreeView::viewportEvent (this=0x2627eb0, event=0x7fff1d890840) at itemviews/qtreeview.cpp:1257
#25 0x00007fa449bfb376 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x28714d0, event=0x7fff1d890840) at kernel/qcoreapplication.cpp:1056
#26 0x00007fa44a5f22dc in QApplicationPrivate::notify_helper (this=0x169f3b0, receiver=0x28714d0, e=0x7fff1d890840) at kernel/qapplication.cpp:4558
#27 0x00007fa44a5f6feb in QApplication::notify (this=<optimized out>, receiver=0x28714d0, e=0x7fff1d890840) at kernel/qapplication.cpp:4105
#28 0x00007fa44f4810f6 in KApplication::notify (this=0x7fff1d8914c0, receiver=0x28714d0, event=0x7fff1d890840) at /usr/src/debug/kdelibs-4.10.2/kdeui/kernel/kapplication.cpp:311
#29 0x00007fa449bfb20e in QCoreApplication::notifyInternal (this=0x7fff1d8914c0, receiver=0x28714d0, event=0x7fff1d890840) at kernel/qcoreapplication.cpp:946
#30 0x00007fa44a5f314b in QApplicationPrivate::sendMouseEvent (receiver=0x28714d0, event=0x7fff1d890840, alienWidget=0x28714d0, nativeWidget=0x261ba10, buttonDown=0x7fa44b0c5268 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:231
#31 0x00007fa44a66d824 in QETWidget::translateMouseEvent (this=0x261ba10, event=<optimized out>) at kernel/qapplication_x11.cpp:4537
#32 0x00007fa44a66c5b1 in QApplication::x11ProcessEvent (this=0x7fff1d8914c0, event=0x7fff1d890fb0) at kernel/qapplication_x11.cpp:3660
#33 0x00007fa44a6926d2 in x11EventSourceDispatch (s=0x169dce0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x00007fa442ddb6d5 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#35 0x00007fa442ddba08 in g_main_context_iterate.isra.24 () from /lib64/libglib-2.0.so.0
#36 0x00007fa442ddbac4 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#37 0x00007fa449c295c6 in QEventDispatcherGlib::processEvents (this=0x1661770, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#38 0x00007fa44a69234e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00007fa449bf9f5f in QEventLoop::processEvents (this=this@entry=0x7fff1d891380, flags=...) at kernel/qeventloop.cpp:149
#40 0x00007fa449bfa1e8 in QEventLoop::exec (this=0x7fff1d891380, flags=...) at kernel/qeventloop.cpp:204
#41 0x00007fa449bfefd8 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#42 0x000000000044b4e9 in main (argc=6, argv=0x7fff1d8915f8) at /usr/src/debug/tellico-2.3.7/src/main.cpp:95
Comment 1 Olivier Delaune 2013-05-11 18:35:42 UTC
I forgot to say that it does not happen with other source that DVDFr.com. For example, there is no crash with IMDB.
Comment 2 Robby Stephenson 2013-05-14 00:17:33 UTC
Git commit 5acb2cc4a1cef254e716f7e34e4911345d6124fc by Robby Stephenson.
Committed on 14/05/2013 at 02:15.
Pushed by rstephenson into branch '2.3'.

Check for empty result before returning list front

I can't reproduce the crash so this is a blind fix based on the
backtrace in the bug report.

If DVDFr.com provides a result, but then doesn't find the same result
when searching for details, return original result.
FIXED-IN: 2.3.8

M  +4    -0    src/fetch/dvdfrfetcher.cpp

http://commits.kde.org/tellico/5acb2cc4a1cef254e716f7e34e4911345d6124fc
Comment 3 Robby Stephenson 2013-05-20 20:46:18 UTC
Git commit d7d2e06892ce117fa6463a826be546f4debcab8f by Robby Stephenson.
Committed on 14/05/2013 at 02:15.
Pushed by rstephenson into branch 'master'.

Check for empty result before returning list front

I can't reproduce the crash so this is a blind fix based on the
backtrace in the bug report.

If DVDFr.com provides a result, but then doesn't find the same result
when searching for details, return original result.
FIXED-IN: 2.3.8

M  +4    -0    src/fetch/dvdfrfetcher.cpp

http://commits.kde.org/tellico/d7d2e06892ce117fa6463a826be546f4debcab8f