Check for empty result before returning list front

I can't reproduce the crash so this is a blind fix based on the
backtrace in the bug report.

If DVDFr.com provides a result, but then doesn't find the same result
when searching for details, return original result.

BUG: 319681
FIXED-IN: 2.3.8